--- a/web-app/app/index.html
+++ b/web-app/app/index.html
@@ -19,10 +19,8 @@
 				</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
-						<li ng-class="activeWhen(path() == '/categorias')"><a
-							href="#/categorias">Categorias</a></li>
-						<li ng-class="activeWhen(path() == '/categorias/new')"
-							ng-show="user.username"><a href="#/categorias/new">Adicionar Categoria</a></li>
+						<li ng-class="activeWhen(path() == '/categorias')"><a href="#/categorias">Categorias</a></li>
+						<li ng-class="activeWhen(path() == '/orientadores')"><a href="#/orientadores">Orientadores</a></li>
 					</ul>
 				</div>
 				<form class="navbar-form pull-right">
