--- a/web-app/app/index.html
+++ b/web-app/app/index.html
@@ -21,6 +21,7 @@
 					<ul class="nav">
 						<li ng-class="activeWhen(path() == '/categorias')"><a href="#/categorias">Categorias</a></li>
 						<li ng-class="activeWhen(path() == '/orientadores')"><a href="#/orientadores">Orientadores</a></li>
+						<li ng-class="activeWhen(path() == '/trabalhos')"><a href="#/trabalhos">Trabalhos</a></li>
 					</ul>
 				</div>
 				<form class="navbar-form pull-right">
